test/files/neg/early-type-defs.scala
//
// scalac: -deprecation -Xsource:3
//
object Test extends { type A1 = Int } with Runnable { def run() = () }
