test/files/neg/early-type-defs.check
early-type-defs.scala:4: warning: early initializers are deprecated; use trait parameters instead.
object Test extends { type A1 = Int } with Runnable { def run() = () }
                    ^
early-type-defs.scala:4: error: early type members are unsupported: move them to the regular body; the semantics are the same
object Test extends { type A1 = Int } with Runnable { def run() = () }
                           ^
1 warning
1 error
